tests/baselines/reference/privateNameWeakMapCollision.errors.txt
tests/cases/compiler/privateNameWeakMapCollision.ts(2,9): error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.
tests/cases/compiler/privateNameWeakMapCollision.ts(4,9): error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.


==== tests/cases/compiler/privateNameWeakMapCollision.ts (2 errors) ====
    function test() {
        let WeakMap;
            ~~~~~~~
!!! error TS18027: Compiler reserves name 'WeakMap' when emitting private identifier downlevel.
        class C {
            #x;
            ~~
!!! error TS18028: Private identifiers are only available when targeting ECMAScript 2015 and higher.
        }
    }
    
    